<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="title_section2">Contacts</string>
    <string name="title_section1">Chats</string>
    <string name="title_compose_message">Start chat</string>
    <string name="title_choose_recipient">Select Recipients</string>
    <string name="title_keyfingerprint">Key Fingerprint</string>
    <string name="title_mythreemaid">My ${app_name_short} ID</string>
    <string name="title_threemaid">${app_name_short} ID</string>
    <string name="title_adduser">Add new contact</string>
    <string name="title_enter_id">Enter ID</string>
    <string name="title_invite_friend">Invite a Friend</string>
    <string name="invite_via">Invite a friend via…</string>
    <string name="invite_email_body">Hello,\n\nI use %1$s, the secure instant messenger that protects users’ privacy.\n\nMy ${app_name_short} ID: https://threema.id/%2$s\n\nLet’s communicate via %1$s!\n\nCheers,\n</string>
    <string name="invite_sms_body">Hi! Let’s use %1$s to communicate in a safe and privacy-compliant way! My ${app_name_short} ID: https://threema.id/%2$s</string>
    <string name="invite_email_subject">${app_name_short}. The secure messenger that protects our privacy</string>
    <string name="enter_id_hint">Enter ${app_name_short} ID</string>
    <string name="account_links">Linked accounts</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About ${app_name}</string>
    <string name="menu_add_contact">New contact</string>
    <string name="menu_done">Done</string>
    <string name="compose_message_and_enter">Tap here to type</string>
    <string name="title_job_title">Job Title</string>
    <string name="title_department">Department</string>
    <string name="send">Send</string>
    <string name="prefs_privacy">Privacy</string>
    <string name="prefs_notifications">Sound &amp; Notifications</string>
    <string name="prefs_chatdisplay">Chat</string>
    <string name="prefs_security">Security</string>
    <string name="prefs_sum_privacy">Privacy-related settings</string>
    <string name="prefs_sum_notifications">Set sound and vibration settings</string>
    <string name="prefs_sum_chatdisplay">Chat settings</string>
    <string name="prefs_masterkey">Encryption of locally stored data</string>
    <string name="prefs_header_contacts">Contacts</string>
    <string name="prefs_header_chat">Chat</string>
    <string name="prefs_header_reset">Reset</string>
    <string name="prefs_header_keyboard">Keyboard</string>
    <string name="prefs_sum_sync_contacts_on">Keep %s users in sync with your device’s address book</string>
    <string name="prefs_sum_sync_contacts_off">Do not sync %s users with your device’s address book</string>
    <string name="prefs_title_sync_contacts">Sync contacts</string>
    <string name="prefs_sum_block_unknown_off">Anybody can send you a message. New contacts will be added automatically when the first message arrives.</string>
    <string name="prefs_sum_block_unknown_on">Only people on your contact list can send you a message.</string>
    <string name="prefs_title_block_unknown">Block unknown</string>
    <string name="prefs_title_read_receipts">Send read receipts</string>
    <string name="prefs_title_typing_indicator">Send typing indicator</string>
    <string name="prefs_media_title">Media &amp; Storage</string>
    <string name="prefs_sum_media_title">Media and storage settings</string>
    <string name="prefs_image_size">Image dimensions</string>
    <string name="prefs_notification_sound">Notification Sound</string>
    <string name="prefs_sum_notification_sound">System default</string>
    <string name="prefs_vibrate">Vibrate</string>
    <string name="prefs_sum_vibrate">Vibrate on incoming message</string>
    <string name="prefs_notification_light">Notification light</string>
    <string name="prefs_sum_notification_light">Use color LED (if available) for incoming messages</string>
    <string name="prefs_sum_light">White</string>
    <string name="prefs_title_wallpaper">Select wallpaper</string>
    <string name="prefs_sum_wallpaper">Select Image for background</string>
    <string name="prefs_title_wallpaper_switch">Wallpaper</string>
    <string name="prefs_title_enter">Enter to send</string>
    <string name="prefs_sum_enter_on">Enter key immediately sends message</string>
    <string name="prefs_sum_enter_off">Enter key adds a new line</string>
    <string name="prefs_system_notifications">Single Chat</string>
    <string name="prefs_inapp">In-app</string>
    <string name="prefs_inapp_sounds">In-app sounds</string>
    <string name="prefs_inapp_sounds_on">Play sound when sending/receiving messages</string>
    <string name="prefs_inapp_sounds_off">Do not play any in-app sounds</string>
    <string name="prefs_inapp_vibrate">In-app vibration</string>
    <string name="prefs_inapp_vibrate_on">Vibrate when receiving messages</string>
    <string name="prefs_inapp_vibrate_off">Do not vibrate when receiving messages</string>
    <string name="prefs_developers" translatable="false">Developers settings</string>
    <string name="workarounds">Workarounds</string>
    <string name="prefs_title_threema_push_switch">Use ${app_name_short} Push</string>
    <string name="prefs_sum_threema_push_on">Use ${app_name_short} Push to be notified about new messages</string>
    <string name="prefs_sum_threema_push_off">Check for new messages using system push service</string>
    <string name="prefs_logging">Logging</string>
    <string name="prefs_title_message_log_switch">Log to file</string>
    <string name="prefs_title_sum_message_log_on">Events and network information will be logged to the file debug_log.txt</string>
    <string name="prefs_title_sum_message_log_off">Events will not be logged</string>
    <string name="prefs_reset_push">Reset push token</string>
    <string name="prefs_sum_reset_push">Re-register the device for push notifications with FCM/HMS</string>
    <string name="prefs_notification_preview">Show message preview</string>
    <string name="prefs_sum_reset_ringtones">Restore system defaults</string>
    <string name="prefs_title_reset_ringtones">Reset notification sound settings</string>
    <string name="image_size_small">Small (640x640)</string>
    <string name="image_size_medium">Medium (1024x1024)</string>
    <string name="image_size_large">Large (1600x1600)</string>
    <string name="image_size_xlarge">X-Large (2592x2592)</string>
    <string name="image_size_original">Original size</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="please_wait">Please wait…</string>
    <string name="please_wait_timeout">This takes longer than expected</string>
    <string name="wizard_first_create_id">Creating your ${app_name_short} ID…</string>
    <string name="wizard1_sync_contacts">Syncing Contacts…</string>
    <string name="wizard2_email_hint">Enter your email address</string>
    <string name="wizard2_email_linking">Linking email to your ID</string>
    <string name="wizard2_phone_hint">Enter your mobile no.</string>
    <string name="wizard2_phone_number_confirm_title">Confirm number</string>
    <string name="wizard2_phone_number_confirm">We are about to send an SMS to:\n\n%1$s\n\nIs this number correct?</string>
    <string name="wizard2_phone_linking">Linking phone number to your ID</string>
    <string name="wizard3_nickname_hint">Enter your nickname</string>
    <string name="set_nickname_title">Set nickname</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="copy_message_action">Copy</string>
    <string name="delete_contact_action">Delete contact</string>
    <string name="delete_multiple_contact_action">Delete contacts</string>
    <string name="share_via">Share via…</string>
    <string name="really_delete_message_title">Delete message</string>
    <string name="support">Help</string>
    <string name="prefs_masterkey_passphrase">No passphrase set</string>
    <string name="prefs_title_masterkey_passphrase">Passphrase</string>
    <string name="menu_restore">Restore from backup</string>
    <string name="forward_message">Forward message</string>
    <string name="save_message_action">Save</string>
    <string name="title_lock">Lock</string>
    <string name="prefs_title_masterkey_notification_newmsg">New message notifications</string>
    <string name="prefs_masterkey_notification_newmsg_off">New messages do not trigger a notification when the master
        key is locked</string>
    <string name="prefs_masterkey_notification_newmsg_on">New messages trigger a generic notification when the master
        key is locked</string>
    <string name="backup_data_title">Data Backup</string>
    <string name="prefs_sum_security_pin">Lock access to the UI</string>
    <string name="prefs_title_pin_switch">App lock</string>
    <string name="prefs_title_pin_code">Set a PIN</string>
    <string name="prefs_pin_grace">Time to lock</string>
    <string name="prefs_sum_pin_grace">Time until the screen lock is activated</string>
    <string name="title_addgroup">New group</string>
    <string name="my_backups_title">Backups</string>
    <string name="share_image">Share Image</string>
    <string name="view_in_gallery">View in Gallery</string>
    <string name="title_add_distribution_list">New distribution list</string>
    <string name="info">Info</string>
    <string name="media_gallery">Media gallery</string>
    <string name="menu_video_size_small">Small size</string>
    <string name="menu_video_size_medium">Medium size</string>
    <string name="menu_video_size_large">Original size</string>
    <string name="show_as_qrcode">Show as QR code</string>
    <string name="send_as_files">Send as file</string>
    <string name="prefs_header_appearance">Appearance</string>
    <string name="prefs_sum_passphrase">Require a passphrase to unlock local encryption</string>
    <string name="prefs_title_masterkey_change_passphrase">Change passphrase</string>
    <string name="media">Media</string>
    <string name="backup_id">Exported ID</string>
    <string name="select_all">Select all</string>
    <string name="prefs_gif_autoplay">Auto-play animated images</string>
    <string name="prefs_proximity_sensor">Use proximity sensor</string>
    <string name="prefs_proximity_sensor_explain">Use earpiece for voice message playback if proximity sensor is covered</string>
    <string name="title_hide_private_chats">Hide private chats</string>
    <string name="prefs_title_locking_mechanism">Locking mechanism</string>
    <string name="lock_option_none">None</string>
    <string name="prefs_title_access_protection">Access protection</string>
    <string name="prefs_title_image_attach_previews">Media quick select</string>
    <string name="prefs_sum_image_attach_previews">Display a list of recently added images in the attachments popup</string>
    <string name="quote">Quote</string>
    <string name="palette">Palette</string>
    <string name="stickers">Stickers</string>
    <string name="text">Text</string>
    <string name="undo">Undo</string>
    <string name="draw">Draw</string>
    <string name="edit_message">Edit message</string>
    <string name="global_search">Search chats</string>
    <string name="archived">Archived</string>
    <string name="delete">Delete</string>
    <string name="show_in_chat">Show in chat</string>
    <string name="pencil">Pencil</string>
    <string name="backup_restore_type"><![CDATA[What kind of backup do you want to restore? <br/><br/> <a href=%s>Learn more about backups in ${app_name_short}</a>]]></string>
    <string name="threema_safe_backup">${app_name_short} Safe Backup</string>
    <string name="draw_reply">Draw reply</string>
    <string name="send_without_audio">Remove audio</string>
    <string name="star_message">Star message</string>
    <string name="remove_star">Remove star</string>
</resources>