<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/radio_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_image_size_small"
            android:orderInCategory="0"
            android:title="@string/image_size_small" />

        <item
            android:id="@+id/menu_image_size_medium"
            android:orderInCategory="1"
            android:title="@string/image_size_medium" />

        <item
            android:id="@+id/menu_image_size_large"
            android:orderInCategory="2"
            android:title="@string/image_size_large" />

        <item
            android:id="@+id/menu_image_size_xlarge"
            android:orderInCategory="3"
            android:title="@string/image_size_xlarge" />

        <item
            android:id="@+id/menu_image_size_original"
            android:orderInCategory="4"
            android:title="@string/image_size_original" />

        <item
            android:id="@+id/menu_send_as_file"
            android:orderInCategory="5"
            android:title="@string/send_as_files" />
    </group>
</menu>
