<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:app="http://schemas.android.com/apk/res-auto">
	<header
		app:fragment="ch.threema.app.preference.SettingsPrivacyFragment"
		app:icon="@drawable/ic_privacy_outline"
		app:key="pref_key_privacy"
		app:persistent="true"
		app:title="@string/prefs_privacy"/>
	<header
		app:fragment="ch.threema.app.preference.SettingsSecurityFragment"
		app:icon="@drawable/ic_lock_outline"
		app:key="pref_key_security"
		app:persistent="true"
		app:title="@string/prefs_security"
		/>
	<header
		app:fragment="ch.threema.app.preference.SettingsAppearanceFragment"
		app:icon="@drawable/ic_palette_outline"
		app:key="pref_key_appearance"
		app:persistent="true"
		app:title="@string/prefs_header_appearance"
		/>
	<header
		app:fragment="ch.threema.app.preference.SettingsNotificationsFragment"
		app:icon="@drawable/ic_notifications_active_outline"
		app:key="pref_key_notifications"
		app:persistent="true"
		app:title="@string/prefs_notifications"
		/>
	<header
		app:fragment="ch.threema.app.preference.SettingsChatFragment"
		app:icon="@drawable/ic_forum_outline"
		app:key="pref_key_chatdisplay"
		app:persistent="true"
		app:title="@string/prefs_chatdisplay"
		/>
	<header
		app:fragment="ch.threema.app.preference.SettingsMediaFragment"
		app:icon="@drawable/ic_folder_multiple_images_outline"
		app:key="pref_key_particular_settings"
		app:persistent="true"
		app:title="@string/prefs_media_title"
		/>
</preference-headers>
