<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/radio_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_video_size_small"
            android:orderInCategory="0"
            android:title="@string/menu_video_size_small" />

        <item
            android:id="@+id/menu_video_size_medium"
            android:orderInCategory="1"
            android:title="@string/menu_video_size_medium" />

        <item
            android:id="@+id/menu_video_size_original"
            android:orderInCategory="2"
            android:title="@string/menu_video_size_large" />

        <item
            android:id="@+id/menu_video_send_as_file"
            android:orderInCategory="3"
            android:title="@string/send_as_files" />
    </group>

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/mute_item"
            android:orderInCategory="10"
            android:title="@string/send_without_audio" />
    </group>

</menu>
