<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/menu_lock"
		android:icon="@drawable/ic_lock_outline"
		android:orderInCategory="10"
		android:title="@string/title_lock"
		android:visible="true"
		app:iconTint="?android:textColorSecondary"
		app:showAsAction="always"/>

	<group
		android:id="@+id/group_search"
		android:checkableBehavior="none">

	<item
		android:id="@+id/globalsearch"
		android:orderInCategory="15"
		android:icon="@drawable/ic_search_outline"
		android:title="@string/global_search"
		android:visible="true"
		app:iconTint="?android:textColorSecondary"
		app:showAsAction="never"/>

	</group>

	<group
		android:id="@+id/group_actions"
		android:checkableBehavior="none">

	<item
		android:id="@+id/menu_new_group"
		android:orderInCategory="30"
		android:title="@string/title_addgroup"
		android:icon="@drawable/ic_group_outline"
		android:visible="true"
		app:showAsAction="never"/>

	<item
		android:id="@+id/menu_new_distribution_list"
		android:orderInCategory="40"
		android:title="@string/title_add_distribution_list"
		android:icon="@drawable/ic_bullhorn_outline"
		android:visible="true"
		app:showAsAction="never"/>

	</group>

	<group android:id="@+id/stuff"
			android:checkableBehavior="none">

	<item
		android:id="@+id/menu_toggle_private_chats"
		android:orderInCategory="20"
		android:title="@string/title_hide_private_chats"
		android:icon="@drawable/ic_outline_visibility"
		android:visible="false"
		app:showAsAction="never"/>

	<item
		android:id="@+id/my_backups"
		android:icon="@drawable/ic_settings_backup_restore_outline"
		android:orderInCategory="50"
		android:title="@string/my_backups_title"
		app:showAsAction="never"/>

	<item
		android:id="@+id/archived"
		android:icon="@drawable/ic_archive_outline"
		android:orderInCategory="55"
		android:title="@string/archived"
		app:showAsAction="never"/>

	<item
		android:id="@+id/webclient"
		android:icon="@drawable/ic_web_notification"
		android:orderInCategory="60"
		android:title="@string/webclient"
		app:showAsAction="never"/>

	<item
		android:id="@+id/directory"
		android:icon="@drawable/ic_contacts_outline"
		android:orderInCategory="70"
		android:title="@string/directory_title"
		android:visible="false"
		app:showAsAction="never"/>

	</group>

	<group
		android:id="@+id/group_help"
		android:checkableBehavior="none">

		<item
			android:id="@+id/threema_channel"
			android:icon="@drawable/ic_rss_feed_outline"
			android:orderInCategory="75"
			android:title="@string/threema_channel"
			app:showAsAction="never"/>

		<item
			android:id="@+id/settings"
			android:icon="@drawable/ic_settings_outline_24dp"
			android:orderInCategory="90"
			android:title="@string/menu_settings"
			app:showAsAction="never"/>

		<item
			android:id="@+id/help"
			android:icon="@drawable/ic_help_outline_24dp"
			android:orderInCategory="95"
			android:title="@string/support"
			app:showAsAction="never"/>

	</group>
</menu>
