<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_gallery"
        android:icon="@drawable/ic_outline_apps"
        android:orderInCategory="1"
        android:title="@string/media_gallery"
        app:iconTint="@android:color/white"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_outline"
        android:orderInCategory="2"
        android:title="@string/share_image"
        android:visible="false"
        app:iconTint="@android:color/white"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_save_outline"
        android:orderInCategory="10"
        android:title="@string/save_message_action"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_view"
        android:icon="@drawable/ic_collections"
        android:orderInCategory="20"
        android:title="@string/view_in_gallery"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_show_in_chat"
        android:icon="@drawable/ic_outline_chat_bubble_outline"
        android:orderInCategory="30"
        android:title="@string/show_in_chat"
        app:showAsAction="never" />

</menu>
