<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="@dimen/wizard_contents_padding">

	<TextView
		android:id="@+id/title"
		style="@style/WizardDialogTitleText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:layout_gravity="center_horizontal"
		android:text="@string/menu_restore"/>

	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/data_backup"
		style="@style/WizardButtonRegular"
		android:layout_width="match_parent"
		android:layout_marginTop="32dp"
		android:text="@string/backup_data_title"/>

	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/id_backup"
		style="@style/WizardButtonRegular"
		android:layout_width="match_parent"
		android:layout_marginTop="16dp"
		android:text="@string/backup_id"/>

	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/cancel"
		style="@style/WizardButtonInverse"
		android:layout_width="wrap_content"
		android:layout_marginTop="32dp"
		android:layout_marginRight="4dp"
		android:layout_weight="1"
		android:text="@string/cancel"/>

</LinearLayout>
